compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__no_rename_constant_with_invalid_name.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nconst value = 10\n"
---
Error response message:

Ten is not a valid name
