compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__no_rename_invalid_name.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wibble\n}\n"
---
Error response message:

Not_AValid_Name is not a valid name
