compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_custom_type_variant_pattern.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub type Type {\n  X\n  Y\n}\n\npub fn main(t) {\n  case t {\n    X -> 0\n    Y -> 0\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub type Type {
  X
  ↑
  Y
}

pub fn main(t) {
  case t {
    X -> 0
    Y -> 0
  }
}


----- AFTER RENAME
-- app.gleam

pub type Type {
  Renamed
  Y
}

pub fn main(t) {
  case t {
    Renamed -> 0
    Y -> 0
  }
}
